# Python-Colour-Info-Extractor

./: .gitignore  INSTALL.md  LICENSE  README.md  colour-extract.py  comprehensive_demo.py  demo_functionality.py  pyproject.toml  simple_demo.py
.github/: FUNDING.yml
src/pycolour_extract/: __init__.py  cli.py
src/pycolour_extract/core/: color_analyzer.py  color_extractor.py  palette_generator.py
src/pycolour_extract/exporters/: __init__.py  format_exporter.py
src/pycolour_extract/models/: color_data.py
tests/: __init__.py  conftest.py  test_cli.py  test_color_analyzer.py  test_color_extractor.py  test_exporters.py  test_integration.py  test_models.py  test_palette_generator.py
